--- a/onion.core/onion.core.csproj
+++ b/onion.core/onion.core.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SharpCompress" Version="0.38.0" />
   </ItemGroup>
 
